serviceability/sa/TestUniverse.java#id0 intermittently fails with assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded

XMLWordPrintable

    • b07
    • Verified

        Test serviceability/sa/TestUniverse.java#id0 intermittently (1 time from ~1000 runs) failed with
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S303/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4b34ab72-e491-4677-9622-3c152ce7e2b6/runs/cebade61-b6dd-4057-bdfd-28af116e24c9/workspace/open/src/hotspot/share/ci/ciInstanceKlass.cpp:54), pid=266818, tid=266840
        # assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded
        #
        # JRE version: Java(TM) SE Runtime Environment (11.0+18) (fastdebug build 11-ea+18)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-ea+18, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I %h" (or dumping to /opt/mach5/mesos/work_dir/slaves/f8c08d6c-24c9-4e26-9e53-04187d2df052-S1427/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a0350a37-7e56-4a7b-9c9d-ffe8e0f655d4/runs/00c92e3e-134c-4433-9e4b-a16a6edc1041/testoutput/jtreg/JTwork/scratch/7/core.266818)
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -Denv.class.path=/opt/mach5/mesos/work_dir/slaves/f8c08d6c-24c9-4e26-9e53-04187d2df052-S1427/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a0350a37-7e56-4a7b-9c9d-ffe8e0f655d4/runs/00c92e3e-134c-4433-9e4b-a16a6edc1041/testoutput/jtreg/JTwork/classes/10/serviceability/sa/TestUniverse_id0.d:/opt/mach5/mesos/work_dir/jib-master/install/jdk/11/18/src.full/open/test/hotspot/jtreg/serviceability/sa:/opt/mach5/mesos/work_dir/slaves/f8c08d6c-24c9-4e26-9e53-04187d2df052-S1427/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a0350a37-7e56-4a7b-9c9d-ffe8e0f655d4/runs/00c92e3e-134c-4433-9e4b-a16a6edc1041/testoutput/jtreg/JTwork/classes/10/test/lib:/opt/mach5/mesos/work_dir/jib-master/install/jdk/11/18/src.full/open/test/lib:/opt/mach5/mesos/work_dir/jib-master/install/com/oracle/java/jib/jib/3.0-SNAPSHOT/jib-3.0-SNAPSHOT-distribution.zip/jib-3.0-SNAPSHOT-distribution/lib/jib-3.0-SNAPSHOT.jar:/opt/mach5/mesos/work_dir/jib-master/install/java/re/jtreg/4.2/promoted/all/b12/bundles/jtreg_bin-4.2.zip/jtreg/lib/javatest.jar:/opt/mach5/mesos/work_dir/jib-master/install/java/re/jtreg/4.2/promoted/all/b12/bundles/jtreg_bin-4.2.zip/jtreg/lib/jtreg.jar -Dapplication.home=/opt/mach5/mesos/work_dir/jib-master/install/jdk/11/18/linux-x64-debug.jdk/jdk-11/fastdebug -Xms8m -Djdk.module.main=jdk.hotspot.agent jdk.hotspot.agent/sun.jvm.hotspot.SALauncher clhsdb --pid 266605

        Host: scaab277.us.oracle.com, Intel(R) Xeon(R) Platinum 8168 CPU @ 2.70GHz, 96 cores, 62G, Oracle Linux Server release 7.4
        Time: Sun Jun 24 07:23:38 2018 PDT elapsed time: 0 seconds (0d 0h 0m 0s)

        --------------- T H R E A D ---------------

        Current thread (0x00007f3358349000): JavaThread "C1 CompilerThread0" daemon [_thread_in_vm, id=266840, stack(0x00007f330656d000,0x00007f330666e000)]


        Current CompileTask:
        C1: 516 402 3 sun.jvm.hotspot.HotSpotTypeDataBase::lookupType (297 bytes)

        Stack: [0x00007f330656d000,0x00007f330666e000], sp=0x00007f330666b9b0, free space=1018k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1891f4f] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x25f
        V [libjvm.so+0x1892d6f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
        V [libjvm.so+0xb24c80] report_vm_error(char const*, int, char const*, char const*, ...)+0x100
        V [libjvm.so+0x8f10d2] ciInstanceKlass::ciInstanceKlass(Klass*)+0x632
        V [libjvm.so+0x92ddb2] ciObjectFactory::create_new_metadata(Metadata*)+0x372
        V [libjvm.so+0x92e6ef] ciObjectFactory::get_metadata(Metadata*)+0x14f
        V [libjvm.so+0x8ee460] ciInstanceKlass::implementor() [clone .part.87]+0x630
        V [libjvm.so+0x777e0b] ciInstanceKlass::nof_implementors()+0x1b
        V [libjvm.so+0x7728d5] GraphBuilder::invoke(Bytecodes::Code)+0xdd5
        V [libjvm.so+0x7738fc] GraphBuilder::iterate_bytecodes_for_block(int)+0xb0c
        V [libjvm.so+0x77529b] GraphBuilder::iterate_all_blocks(bool)+0x17b
        V [libjvm.so+0x7761c6] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0x246
        V [libjvm.so+0x781a29] IR::IR(Compilation*, ciMethod*, int)+0x669
        V [libjvm.so+0x747bb0] Compilation::build_hir() [clone .part.109]+0x260
        V [libjvm.so+0x74ccf8] Compilation::compile_java_method()+0xbb8
        V [libjvm.so+0x74d3e4] Compilation::compile_method()+0x1d4
        V [libjvm.so+0x74dfb7] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, DirectiveSet*)+0x357
        V [libjvm.so+0x7501ac] Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x14c
        V [libjvm.so+0xa94613] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x403
        V [libjvm.so+0xa955d7] CompileBroker::compiler_thread_loop()+0x317
        V [libjvm.so+0x17d7087] JavaThread::thread_main_inner()+0x2c7
        V [libjvm.so+0x17d73c9] JavaThread::run()+0x239
        V [libjvm.so+0x14ed030] thread_native_entry(Thread*)+0x100

              Assignee:
              Coleen Phillimore
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: