8207924: serviceability/sa/TestUniverse.java#id0 intermittently fails with assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded

InstanceKlass::implementors() needs the Compile_lock

Reviewed-by: thartmann, eosterlund